--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
     <!--Header Section End-->
 
     <!--Hero Section Start-->
-    
+    <div id="hero">
+        <div class="hero-container">
+            <div>
+                <h1>Hello <span></span></h1>
+                <h1>My Name is <span></span></h1>
+                <h1>Ayyubi <span></span></h1>
+                <a href="#projects" type="button" class="cta">Portfolio</a>
+            </div>
+        </div>
+    </div>
     <!--Hero Section End-->
 
     <!--Service Section Start-->
