--- a/index.html
+++ b/index.html
@@ -48,6 +48,57 @@
     <!--Hero Section End-->
 
     <!--Service Section Start-->
+    <section id="services">
+        <div class="services-container">
+            <div class="service-top">
+                <h1 class="section-title">Serv <span>i</span>ces</h1>
+                <p>Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit. Deserunt unde iure, quasi 
+                    dolorem perspiciatis beatae reprehenderit 
+                    voluptas consequatur est sed.</p>
+            </div>
+            <div class="service-bottom">
+                <!--Service item 1-->
+                <div class="service-item">
+                    <div class="icon"><img src="./images/Service-icon.png" alt=""></div>
+                    <h1>Web Design</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
+                        Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
+                        exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
+                        cumque et consectetur, deleniti molestiae.</p>
+                </div>
+                 <!--Service item 2-->
+                 <div class="service-item">
+                    <div class="icon"><img src="./images/Service-icon.png" alt=""></div>
+                    <h1>Web Design</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
+                        Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
+                        exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
+                        cumque et consectetur, deleniti molestiae.</p>
+                </div>
+                 <!--Service item 3-->
+                 <div class="service-item">
+                    <div class="icon"><img src="./images/Service-icon.png" alt=""></div>
+                    <h1>Web Design</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
+                        Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
+                        exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
+                        cumque et consectetur, deleniti molestiae.</p>
+                </div>
+                 <!--Service item 4-->
+                 <div class="service-item">
+                    <div class="icon"><img src="./images/Service-icon.png" alt=""></div>
+                    <h1>Web Design</h1>
+                    <p>Lorem ipsum 
+                        dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
+                        Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
+                        exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
+                        cumque et consectetur, deleniti molestiae.</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <!--Service Section End-->
 
     <!--Project Section Start-->
