--- a/index.html
+++ b/index.html
@@ -52,10 +52,14 @@
         <div class="services-container">
             <div class="service-top">
                 <h1 class="section-title">Serv <span>i</span>ces</h1>
-                <p>Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Deserunt unde iure, quasi 
-                    dolorem perspiciatis beatae reprehenderit 
-                    voluptas consequatur est sed.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consectetur sequi quidem. 
+                    Vero, repellat distinctio temporibus vitae maxime incidunt cupiditate praesentium atque nam 
+                    ratione ipsa earum velit ipsam. Sed laborum voluptas at perspiciatis quae laudantium beatae esse 
+                    repudiandae voluptate enim, ex dignissimos soluta distinctio est minus temporibus inventore labore 
+                    magni ab, dolore sapiente velit suscipit. Ipsum ea iure optio velit a delectus sint nulla quos 
+                    necessitatibus voluptatem quae vel, fugit cum iste tempore reiciendis? Illo neque nostrum facilis 
+                    excepturi qui quidem ullam aperiam ut dolore cum, laudantium voluptatibus reiciendis, vitae facere 
+                    quod aspernatur sed? Iure voluptatem autem quod odit vero.</p>
             </div>
             <div class="service-bottom">
                 <!--Service item 1-->
@@ -65,7 +69,10 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
                         Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
                         exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
-                        cumque et consectetur, deleniti molestiae.</p>
+                        cumque et consectetur, deleniti molestiae.
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Consectetur minima dignissimos voluptas numquam repudiandae 
+                    dolores inventore suscipit blanditiis? Cum, quasi!</p>
                 </div>
                  <!--Service item 2-->
                  <div class="service-item">
@@ -74,7 +81,9 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
                         Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
                         exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
-                        cumque et consectetur, deleniti molestiae.</p>
+                        cumque et consectetur, deleniti molestiae.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia esse 
+                    repellendus quidem rem veritatis aliquid expedita quae repellat odit voluptates.</p>
                 </div>
                  <!--Service item 3-->
                  <div class="service-item">
@@ -83,17 +92,19 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
                         Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
                         exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
-                        cumque et consectetur, deleniti molestiae.</p>
+                        cumque et consectetur, deleniti molestiae.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Architecto ad cum ullam eaque earum reprehenderit qui fugiat numquam nam eum.</p>
                 </div>
                  <!--Service item 4-->
                  <div class="service-item">
                     <div class="icon"><img src="./images/Service-icon.png" alt=""></div>
                     <h1>Web Design</h1>
-                    <p>Lorem ipsum 
-                        dolor sit amet, consectetur adipisicing elit. Facilis, iure? 
-                        Corrupti blanditiis reprehenderit architecto. Rerum aliquid maxime 
-                        exercitationem incidunt, quam dolorum optio porro fugiat dolorem 
-                        cumque et consectetur, deleniti molestiae.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, porro eius, 
+                        ipsum velit deserunt, consequuntur quos soluta in aperiam dignissimos atque ea! 
+                        Ad, aliquam modi! Dolor impedit ex, quod quo rem molestiae cupiditate enim, magnam 
+                        obcaecati esse necessitatibus. Ipsum laboriosam animi et excepturi quae voluptas? Similique 
+                        praesentium delectus dolorem vero!</p>
                 </div>
 
             </div>
@@ -102,9 +113,89 @@
     <!--Service Section End-->
 
     <!--Project Section Start-->
+    <section id="projects">
+        <div class="projects-container">
+            <div class="projects-header">
+                <h1 class="section-title">Recent <span>Projects</span></h1>
+            </div>
+            <div class="all-projects">
+                <!--project 01-->
+                <div class="projects-items">
+                    <div class="project-info">
+                        <h1>Project 01</h1>
+                        <h2>Web Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
+                    </div>
+                    <div class="project-image">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <!--project 02-->
+                <div class="projects-items">
+                    <div class="project-info">
+                        <h1>Project 02</h1>
+                        <h2>Web Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
+                    </div>
+                    <div class="project-image">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <!--project 03-->
+                <div class="projects-items">
+                    <div class="project-info">
+                        <h1>Project 03</h1>
+                        <h2>Web Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
+                    </div>
+                    <div class="project-image">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <!--project 04-->
+                <div class="projects-items">
+                    <div class="project-info">
+                        <h1>Project 04</h1>
+                        <h2>Web Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
+                    </div>
+                    <div class="project-image">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                <!--project 05-->
+                <div class="projects-items">
+                    <div class="project-info">
+                        <h1>Project 05</h1>
+                        <h2>Web Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
+                    </div>
+                    <div class="project-image">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--Project Section End-->
 
     <!--About Section Start-->
+    <section id="about">
+        <div class="about-container">
+            <div class="column-left">
+                <div class="about-image">
+                    <img src="" alt="my image">
+                </div>
+            </div>
+            <div class="column-right">
+                <h1 class="section-title">About <span>me</span></h1>
+                <h2>Front End Development</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus fugiat est quae nobis amet! Nesciunt aliquam reiciendis nulla, magni nihil, qui vitae eum enim ipsum quidem incidunt possimus,
+                    nam dolores.</p>
+                <a href="#" class="cta">Download Resume</a>
+            </div>
+        </div>
+    </section>
     <!--About Section End-->
 
     <!--Contact Section Start-->
