--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayyubi | Web Developer</title>
+    <title>Bismillah | Front-End Developer</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!--Header Section Start-->
@@ -12,7 +13,7 @@
             <div class="nav-bar">
                 <div class="brand">
                     <a href="#hero">
-                        <h1><span>K</span>han<span>A</span>yyubi</h1>
+                        <h1>Bismillha Khan Ayyubi</h1>
                     </a>
                 </div>
                 <div class="nav-list">
@@ -36,7 +37,7 @@
 
     <!--Hero Section Start-->
     <div id="hero">
-        <div class="hero-container">
+        <div class="hero container">
             <div>
                 <h1>Hello <span></span></h1>
                 <h1>My Name is <span></span></h1>
@@ -49,7 +50,7 @@
 
     <!--Service Section Start-->
     <section id="services">
-        <div class="services-container">
+        <div class="services container">
             <div class="service-top">
                 <h1 class="section-title">Serv <span>i</span>ces</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima consectetur sequi quidem. 
@@ -114,7 +115,7 @@
 
     <!--Project Section Start-->
     <section id="projects">
-        <div class="projects-container">
+        <div class="projects container">
             <div class="projects-header">
                 <h1 class="section-title">Recent <span>Projects</span></h1>
             </div>
@@ -127,7 +128,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
                     </div>
                     <div class="project-image">
-                        <img src="" alt="">
+                        <img src="./images/project image.webp" alt="">
                     </div>
                 </div>
                 <!--project 02-->
@@ -138,7 +139,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
                     </div>
                     <div class="project-image">
-                        <img src="" alt="">
+                        <img src="./images/project image.webp" alt="">
                     </div>
                 </div>
                 <!--project 03-->
@@ -149,7 +150,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
                     </div>
                     <div class="project-image">
-                        <img src="" alt="">
+                        <img src="./images/project image.webp" alt="">
                     </div>
                 </div>
                 <!--project 04-->
@@ -160,7 +161,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
                     </div>
                     <div class="project-image">
-                        <img src="" alt="">
+                        <img src="./images/project image.webp" alt="">
                     </div>
                 </div>
                 <!--project 05-->
@@ -171,7 +172,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi accusamus error facilis voluptates, odit beatae alias veritatis. Pariatur earum vero minima ea aliquam possimus temporibus harum excepturi, voluptatum hic. Nostrum.</p>
                     </div>
                     <div class="project-image">
-                        <img src="" alt="">
+                        <img src="./images/project image.webp" alt="">
                     </div>
                 </div>
             </div>
@@ -181,7 +182,7 @@
 
     <!--About Section Start-->
     <section id="about">
-        <div class="about-container">
+        <div class="about container">
             <div class="column-left">
                 <div class="about-image">
                     <img src="" alt="my image">
@@ -199,9 +200,66 @@
     <!--About Section End-->
 
     <!--Contact Section Start-->
+    <section id="contact">
+        <div class="contact container">
+            <div>
+                <h1 class="section-title">Contact <span>info</span></h1>
+
+            </div>
+            <div class="contact-items">
+                <!--Phone-->
+                <div class="contact-item">
+                    <div class="icon"><img src=""></div>
+                    <div class="contact-info">
+                        <h1>Phone</h1>
+                        <h2>=993333</h2>
+                        <h2>093993939</h2>
+                    </div>
+                </div>
+                <!--Email-->
+                <div class="contact-item">
+                    <div class="icon"><img src=""></div>
+                    <div class="contact-info">
+                        <h1>Email</h1>
+                        <h2>abc@gmail.com</h2>
+                    </div>
+                <!--Address-->
+                <div class="contact-item">
+                    <div class="icon"><img src=""></div>
+                    <div class="contact-info">
+                        <h1>Address</h1>
+                        <h2>Danish Abad Peshawar</h2>
+                    </div>
+                </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
     <!--Contact Section End-->
 
     <!--Footer Section Start-->
+    <section id="footer">
+        <div class="footer container">
+            <div class="brand">
+                <h1>Khan Ayubi</h1>
+            </div>
+            <h2>your complete web solution</h2>
+            <!--Githut-->
+            <div class="social-icons">
+                <a href=""><img src="">Github</a>
+            </div>
+            <!--Youtube-->
+            <div class="social-icons">
+                <a href=""><img src="">Youtube</a>
+            </div>
+            <!--Facebook-->
+            <div class="social-icons">
+                <a href=""><img src="">Facebook</a>
+            </div>
+            <p>Copyright &copy; 2024 Ayubi. All rights reserved</p>
+        </div>
+    </section>
     <!--Footer Section End-->
 </body>
 </html>
