--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!--Header Section Start-->
     <section id="header">
-      <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
         <a class="navbar-brand fw-bold" href="#"
           ><span>C</span>ode<span>W</span>ith<span>A</span>yubi</a
         >
